--- a/CodePlayground/HTML/index.html
+++ b/CodePlayground/HTML/index.html
@@ -17,18 +17,6 @@
     <div class="item6">6</div>
 </div>-->
 
-<!--<div id="clalc">
-    <div id="humanAge">
-        <p>please enter age</p>
-        <input id="age"></input>
-        <button onclick="dogCalc(this)">Submit</button>
-    </div>
-    <div id="dogAge">
-        <p>Your age in dog years</p>
-        <div id="display"></div>
-    </div>
-</div>-->
-
 <h1>JavaScript Playground</h1>
 <div class="container">
     <div id="buttonGame">
@@ -42,19 +30,21 @@
     </div>
 </div>
 
+<div id="cars">
+    <p id ="txt"></p>
+    <p id="demo"></p>
+    <input type="text" id="guess">
+    <button class="button2" onclick="guess()">Submit</button>
+    <p id="answer"></p>
+</div>
 
-    <div id="cars">
-        <p id ="txt"></p>
-        <p id="demo"></p>
-        <input type="text" id="guess">
-        <button  onclick="guess()">Submit</button>
-        <p id="answer"></p>
-    </div>
+<br>
 
-
+<!--
 <input type="text" id = "arrayPlay">
 <p id="arrayDisplay"></p>
 <button onclick="arrayPlay()">Enter</button>
+-->
 
 </body>
 
