--- a/CodePlayground/HTML/index.html
+++ b/CodePlayground/HTML/index.html
@@ -36,6 +36,7 @@
     <input type="text" id="guess">
     <button class="button2" onclick="guess()">Submit</button>
     <p id="answer"></p>
+    <img id="car" src="/Images/car.jpg" alt="Blue 55 Chevy Bel-Aire">
 </div>
 
 <br>
